# ConnectFourApp

./: .gitignore  CMakeLists.txt  README.TXT  TODO.txt  board.c  board.h  boardconstants.c  boardconstants.h  env.h  gametheory.c  gametheory.h  main.c  matchmask.c  matchmask.h  pthread.c  readme.md  types.h
inc/: config.h.in  readme.md
lib/: CMakeLists.txt  readme.md
lib/cfboard/: CMakeLists.txt  cfboard.h  cfboardversion.cpp  cfboardversion.h  env.h
lib/sampleadder/: CMakeLists.txt  readme.md  sampleadder.cpp  sampleadder.h  sampleadderversion.cpp  sampleadderversion.h
lib/samplecombinatorics/: CMakeLists.txt  readme.md  samplecombinatorics.cpp  samplecombinatorics.h  samplecombinatoricsversion.cpp  samplecombinatoricsversion.h
scripts/: build.sh  configure.sh  execute.sh  include.sh  install.sh  readme.md
src/: board.c  board.h  boardconstants.c  gametheory.c  matchmask.c
tests/: cfboard_tests.cpp  readme.md  sampleadder_tests.cpp  samplecombinatorics_tests.cpp
